--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-chirpy
+theme: Midnight
 title: Talgat's homepage
 description: Bookmark this to keep an eye on my project updates!
