--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: Midnight
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme
 title: Talgat's homepage
 description: Bookmark this to keep an eye on my project updates!
